--- a/src/app.html
+++ b/src/app.html
@@ -10,6 +10,30 @@
 
 <body data-sveltekit-preload-data="hover" data-theme="wintry">
 	<div style="display: contents" class="h-full w-full">%sveltekit.body%</div>
+	<script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+	<script defer>
+		window.botpressWebChat.init({
+			composerPlaceholder: "Chat with Smart Buddy",
+			botConversationDescription: "hey buddy!!! how can i help you?",
+			botId: "4e9a144f-209e-434b-9702-a73b6831ab0f",
+			hostUrl: "https://cdn.botpress.cloud/webchat/v1",
+			messagingUrl: "https://messaging.botpress.cloud",
+			clientId: "4e9a144f-209e-434b-9702-a73b6831ab0f",
+			webhookId: "7fc8089d-a938-4e9b-a7d3-ddfc36a00ef1",
+			lazySocket: true,
+			themeName: "prism",
+			botName: "Smart Buddy",
+			avatarUrl:
+				"https://w7.pngwing.com/pngs/224/462/png-transparent-infinity-symbol-logo-infinity-miscellaneous-text-trademark-thumbnail.png",
+			stylesheet:
+				"https://webchat-styler-css.botpress.app/prod/418bbb54-ebf7-4855-a586-bc3676d793b9/v67040/style.css",
+			frontendVersion: "v1",
+			enableConversationDeletion: true,
+			showPoweredBy: false,
+			theme: "prism",
+			themeColor: "#2563eb",
+		});
+	</script>
 </body>
 
 </html>
