--- a/src/app.html
+++ b/src/app.html
@@ -10,9 +10,9 @@
   <body data-sveltekit-preload-data="hover" data-theme="wintry">
     <div style="display: contents" class="h-full w-full">%sveltekit.body%</div>
     <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
-    <script defer>
+    <script>
       window.botpressWebChat.init({
-        composerPlaceholder: "Chat with Smart Buddy",
+        composerPlaceholder: "hi there",
         botConversationDescription: "hey buddy!!! how can i help you?",
         botId: "4e9a144f-209e-434b-9702-a73b6831ab0f",
         hostUrl: "https://cdn.botpress.cloud/webchat/v1",
@@ -25,10 +25,10 @@
         avatarUrl:
           "https://w7.pngwing.com/pngs/224/462/png-transparent-infinity-symbol-logo-infinity-miscellaneous-text-trademark-thumbnail.png",
         stylesheet:
-          "https://webchat-styler-css.botpress.app/prod/418bbb54-ebf7-4855-a586-bc3676d793b9/v67040/style.css",
+          "https://webchat-styler-css.botpress.app/prod/418bbb54-ebf7-4855-a586-bc3676d793b9/v21812/style.css",
         frontendVersion: "v1",
         enableConversationDeletion: true,
-        showPoweredBy: false,
+        showPoweredBy: true,
         theme: "prism",
         themeColor: "#2563eb",
       });
